# boats

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_macos.yml  build_multiplatform.yml
lib/raylib_macos/: README.txt
src/client/: client_api.c  client_api.h  client_commands.c  client_commands.h  client_globals.c  client_recv.c  client_recv.h  client_state.h  main_client.c
src/client/cli/: cli_callbacks.c  cli_callbacks.h  cli_ui.c  client_cli.c  client_ui.c  client_ui.h
src/client/gui/: gui_draw.c  gui_draw.h  gui_input.c  gui_input.h  gui_state.c  gui_state.h  raylib_ui.c
src/common/: common.c  common.h  game.c  game.h  generic_queue.c  generic_queue.h
src/server/: main_server.c  server.c  server_client.c  server_client.h  server_commands.c  server_commands.h  server_message.c  server_message.h  server_state.c  server_state.h
web/: README.md  package-lock.json  package.json  server.js
web/public/: game.js  index.html  style.css
